[gd_scene load_steps=6 format=3 uid="uid://fj6sndtuf4vm"]

[ext_resource type="Script" path="res://Scripts/Main Menu.gd" id="1_gdgc6"]
[ext_resource type="Theme" uid="uid://chyneastuoptt" path="res://Assets/GreenButtonTheme.tres" id="2_qkt0a"]
[ext_resource type="Material" uid="uid://bhjsidfus7hq1" path="res://Shaders/3d_game.tres" id="3_puesa"]

[sub_resource type="Theme" id="Theme_i5621"]
default_font_size = 0
MarginContainer/constants/margin_bottom = 10
MarginContainer/constants/margin_top = 10

[sub_resource type="Theme" id="Theme_blbed"]
VBoxContainer/constants/separation = 6

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gdgc6")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
visibility_layer = 2
material = ExtResource("3_puesa")
layout_mode = 0
offset_right = 1091.0
offset_bottom = 1947.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -165.0
offset_right = 31.0
offset_bottom = 115.0
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_i5621")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_blbed")

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qkt0a")
text = "Pelaa"

[node name="ScoreBoard" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_qkt0a")
text = "Tulostaulukko
"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qkt0a")
text = "Poistu
"

[node name="Scores" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.069
anchor_right = 0.5
anchor_bottom = 0.069
offset_left = -319.0
offset_top = -66.48
offset_right = 113.0
offset_bottom = 226.52
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="VBoxContainer" parent="Scores"]
layout_mode = 2

[node name="Label11" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "ENNÃ„TYKSET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "1:"

[node name="Label2" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "2:"

[node name="Label3" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "3:"

[node name="Label4" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "4:"

[node name="Label5" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "5:"

[node name="Label6" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "6:"

[node name="Label7" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "7:"

[node name="Label8" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "8:"

[node name="Label9" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "9:"

[node name="Label10" type="Label" parent="Scores/VBoxContainer"]
layout_mode = 2
text = "10:"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScoreBoard" to="." method="_on_score_board_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
